# BC-Project

./: CMakeLists.txt  comparison.c  comparison.h  fitness_functions.c  fitness_functions.h  helper_functions.c  helper_functions.h  main  main.c  minimum.txt  output.txt  parameters.c  parameters.h  search.c  search.h  testik.txt
